basic routing, comments

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,33 +1,67 @@
-<main>
-  <header>
-    <h1>Compliancy Connector</h1>
-  </header>
-  <section class="full-width">
-    <div class="column two">
-
+<h1>Totals</h1>
+<section class="full-width">
+  <article>
+    <div class="card columns one-half">
+      <h2>Zip Check - Top Locations by Compliancy</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>State</th>
+            <th>Total Zip Code Checks</th>
+            <th>Compliant Zip Checks</th>
+            <th>Non-Compliant Zip Check</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
-    <article class="column eight">
-      <div class="card">
-        <form action="/add-credentials" method="POST">
-          <div class="row">
-            <label for="username">Username: </label>
-            <input type="text" name="username" value="">
-          </div>
-          <div class="row">
-            <label for="password">Password: </label>
-            <input type="password" name="password" value="">
-          </div>
-          <div class="row">
-            <label for="partnerKey">Partner key: </label>
-            <input type="text" name="partnerKey" value="">
-          </div>
-          <button type="submit">Submit</button>
-        </form>
-      </div>
-    </article>
-    <div class="column two">
-
+    <div class="card columns one-half">
+      <h2>Compliant States</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>State</th>
+            <th>Licensed?<th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
-  </section>
-  <footer></footer>
-</main>
+  </article>
+</section>
+
+<h1>High Level Timeline</h1>
+<section class="full-width">
+  <article>
+    <div class="card columns twelve">
+      <h2>Zip Check &ndash; Compliancy by Date</h2>
+      <ul class="sort-group">
+        <li>State</li>
+        <li>Zip Check</li>
+        <li>Date Range</li>
+        <li>By Week</li>
+      </ul>
+    </div>
+  </article>
+</section>
+
+<h1>Recent Compliancy Checks</h1>
+<section class="full-width">
+  <article>
+    <div class="card columns twelve">
+      <h2>Zip Check &ndash; Compliancy by Date</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Status</th>
+            <th>State</th>
+            <th>Total Cart Value</th>
+            <th>Tax Addition</th>
+            <th>Date &amp; Time Stamp</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+  </article>
+</section>
