--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,7 +16,7 @@
         });
       });
   </script>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="/styles/uptown.css">
 </head>
 
 <body>
