--- a/views/layouts/authorized.hbs
+++ b/views/layouts/authorized.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Ship Compliant</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="/styles/uptown.css">
 </head>
 
 <body>
