--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,7 +7,7 @@
   <script type="text/javascript">
       ShopifyApp.init({
         apiKey: '{{apiKey}}',
-        shopOrigin: "https://ship-compliant-dev.myshopify.com",
+        shopOrigin: "https://{{shop}}",
         debug: true
       });
       ShopifyApp.ready(function () {
