remove old code

--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -1,4 +1,4 @@
 <div>
-  <button><a href="/compliancy-connector/login">Login</a></button>
-  <button><a href="/compliancy-connector/signup">Sign Up!</a></button>
+  <a href="/app/login">Login</a>
+  <a href="/app/signup">Sign Up!</a>
 </div>
