--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,11 +12,10 @@
       });
       ShopifyApp.ready(function () {
         ShopifyApp.Bar.initialize({
-          title: 'Compliancy Connector',
+          title: 'Vine Link',
         });
       });
   </script>
-  <link rel="stylesheet" href="/styles/uptown.css">
 </head>
 
 <body>
