--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Ship Compliant</title>
+  <title>Vine Link</title>
   <script src="https://cdn.shopify.com/s/assets/external/app.js"></script>
   <script type="text/javascript">
       ShopifyApp.init({
@@ -16,11 +16,14 @@
         });
       });
   </script>
+  <link rel="stylesheet" href="/styles/styles.css">
 </head>
 
 <body>
+  <main>
+    {{{body}}}
+  </main>
 
-  {{{body}}}
-
+<script src="js/app.js" charset="utf-8"></script>
 </body>
 </html>
