--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -2,6 +2,7 @@
   <section class="landing__inner">
     <img src="logo.svg" alt="Vine Link" class="landing__logo">
     <h1 class="landing__header">Vinelink</h1>
+    <p class="error">&nbsp;</p>
     <form class="login-form">
       <div class="form-group">
         <label for="username">Username:</label>
