--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -24,6 +24,6 @@
     {{{body}}}
   </main>
 
-<script src="js/app.js" charset="utf-8"></script>
+<script src="/js/app.js" charset="utf-8"></script>
 </body>
 </html>
