--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,43 +1,47 @@
 <div class="sign-up">
   <section class="sign-up__inner ">
-    <h2 class="sign-up__header">Sign up</h2>
+    <div class="sign-up__heading">
+      <img src="/logo.svg" alt="Vine Link" class="sign-up__logo">
+      <h2 class="sign-up__header">Sign up</h2>
+    </div>
 
-    <form action="/compliancy-connector/signup" method="POST">
+
+    <form class="sign-up__form">
       <h3 class="sign-up__sub-header">Personal information</h3>
       <div class="form-group">
         <label>First name:</label>
-        <input type="text" name="first_name" autofocus required/>
+        <input type="text" name="first_name" id="sign-up-first" autofocus required/>
       </div>
       <div class="form-group">
         <label>Last name:</label>
-        <input type="text" name="last_name" required/>
+        <input type="text" name="last_name" id="sign-up-last" required/>
       </div>
 
       <h3 class="sign-up__sub-header">Account information</h3>
       <div class="form-group">
         <label>Email:</label>
-        <input type="email" name="email" required />
+        <input type="email" name="email" id="sign-up-email" required />
       </div>
       <div class="form-group">
         <label>Username:</label>
-        <input type="text" name="username" required />
+        <input type="text" name="username" id="sign-up-username" required />
       </div>
       <div class="form-group">
         <label>Password:</label>
-        <input type="password" name="password" required />
+        <input type="password" name="password" id="sign-up-password" required />
       </div>
       <div class="form-group">
         <label>Confirm password:</label>
-        <input type="password" name="password_confirm" required />
+        <input type="password" name="password_confirm" id="sign-up-confirm" required />
       </div>
       <h3 class="sign-up__sub-header">ShipCompliant information</h3>
       <div class="form-group">
         <label>ShipCompliant username:</label>
-        <input type="text" name="sc_username" required />
+        <input type="text" name="sc_username" id="sign-up-scuser" required />
       </div>
       <div class="form-group">
         <label>ShipCompliant password:</label>
-        <input type="password" name="sc_password" required />
+        <input type="password" name="sc_password" id="sign-up-scpassword" required />
       </div>
       <button type="submit" class="btn btn--primary">Submit</button>
     </form>
