inital react polaris integration

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -6,7 +6,7 @@
     </div>
 
 
-    <form class="sign-up__form">
+    <div>
       <h3 class="sign-up__sub-header">Personal information</h3>
       <div class="form-group">
         <label>First name:</label>
@@ -43,7 +43,7 @@
         <label>ShipCompliant password:</label>
         <input type="password" name="sc_password" id="sign-up-scpassword" required />
       </div>
-      <button type="submit" class="btn btn--primary">Submit</button>
-    </form>
+      <button type="button" class="btn btn--primary" id="sign-up-submit">Submit</button>
+    </div>
   </section>
 </div>
