--- a/views/layouts/authorized.hbs
+++ b/views/layouts/authorized.hbs
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <title>Vine Link</title>
+  <link rel="stylesheet" href="https://sdks.shopifycdn.com/polaris/1.1.1/polaris.min.css">
 </head>
 
 <body>
 
   <div id="root">
-
+    <h1>loading...</h1>
   </div>
 
 </body>
