--- a/views/layouts/authorized.hbs
+++ b/views/layouts/authorized.hbs
@@ -3,6 +3,7 @@
 <head>
   <title>Vine Link</title>
   <link rel="stylesheet" href="https://sdks.shopifycdn.com/polaris/1.1.1/polaris.min.css">
+  <link rel="stylesheet" href="/styles/main.css">
 </head>
 
 <body>
