--- a/src/styles/tile-aggregate.scss
+++ b/src/styles/tile-aggregate.scss
@@ -3,31 +3,11 @@
   &__row {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 15px;
   }
 
-  &__compliant {
-    border-top: 4px solid green;
-
-    h3 {
-      color: green;
-    }
-  }
-
-  &__compliant &__digits {
-    color: green;
-    font-weight: 600;
-  }
-
-  &__noncompliant {
-    border-top: 4px solid red;
-
-    h3 {
-      color: red;
-    }
-  }
-
-  &__noncompliant &__digits {
-    color: red;
-    font-weight: 600;
+  &__digits {
+    font-size: 32px;
+    font-weight: 800;
   }
 }
