--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,6 +1,15 @@
 .settings {
-  h1 {
-    font-weight: 800;
+  h2 {
     font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+  }
+
+  p {
+    margin-bottom: 15px;
+  }
+
+  .btn--delete {
+    margin-top: 15px;
   }
 }
