--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -1,6 +1,6 @@
 <div class="landing">
   <section class="landing__inner">
-    <img src="logo.svg" alt="Vine Link" class="landing__logo">
+    <img src="img/logo.svg" alt="Vine Link" class="landing__logo">
     <h1 class="landing__header">Vinelink</h1>
     <p class="error">&nbsp;</p>
     <form class="login-form">
