--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,7 +1,7 @@
 <div class="sign-up">
   <section class="sign-up__inner ">
     <div class="sign-up__heading">
-      <img src="/logo.svg" alt="Vine Link" class="sign-up__logo">
+      <img src="img/logo.svg" alt="Vine Link" class="sign-up__logo">
       <h2 class="sign-up__header">Sign up</h2>
     </div>
 
